fixed buttons on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  //padding: 0 5%;
 
   @include desktop {
     background-image: none;
@@ -80,18 +79,14 @@
   }
 
   &__button-container {
-    width: 100%;
-
-    height: 7rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 6rem 5% 0;
+    margin: 6rem 5% 0 5%;
 
     @include desktop {
       width: auto;
-      position: relative;
-      padding: 0;
+      margin: 0;
     }
   }
 
@@ -132,18 +127,5 @@
         filter: brightness(150%);
       }
     }
-  }
-
-  &__change {
-    background: none;
-    color: $secondary-text-grey;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    font-size: 1.4rem;
-    text-decoration: underline;
-    text-align: left;
   }
 }
